--- a/debugging.ipynb
+++ b/debugging.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 108,
    "id": "826bdf29",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
     "patient_data = pd.DataFrame([{\n",
     "    'patient_id': 112,\n",
     "    'age': 27,\n",
-    "    'sex': \"Female\",\n",
+    "    'sex': \"Male\",\n",
     "    'recording_date': '2025-08-13 09:17:34'\n",
     "}])\n"
    ]
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 109,
    "id": "b9b3489d",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
        "5       QTc (Corrected QT) -1972.83   ms    Normal"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 110,
    "id": "688ef04b",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
        "'Normal Sinus'"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 111,
    "id": "2f6dba86",
    "metadata": {},
    "outputs": [
@@ -7878,7 +7878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 112,
    "id": "2cd087a7",
    "metadata": {},
    "outputs": [
@@ -7907,7 +7907,7 @@
        " ('Lateral', ['I', 'V6'])]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7921,7 +7921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 113,
    "id": "d8c6d84d",
    "metadata": {},
    "outputs": [
@@ -8017,7 +8017,7 @@
        "5                      [46, 41, 60, 57, 55, 75, 66]   6.424728  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
